# mock_project2

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MediaPlayerApp  build_and_run.sh  cmake_install.cmake  coverage.info  coverage_controllers.info  coverage_models.info  coverage_services.info  debug_braces.py
build_repro/: CMakeCache.txt
coverage_report/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/controllers/: HardwareController.cpp.func-c.html  HardwareController.cpp.func.html  HardwareController.cpp.gcov.html  LibraryController.cpp.func-c.html  LibraryController.cpp.func.html  LibraryController.cpp.gcov.html  MainController.cpp.func-c.html  MainController.cpp.func.html  MainController.cpp.gcov.html  PlaybackController.cpp.func-c.html  PlaybackController.cpp.func.html  PlaybackController.cpp.gcov.html  PlaylistController.cpp.func-c.html  PlaylistController.cpp.func.html  PlaylistController.cpp.gcov.html  QueueController.cpp.func-c.html  QueueController.cpp.func.html  QueueController.cpp.gcov.html  SourceController.cpp.func-c.html  SourceController.cpp.func.html  SourceController.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/models/: LibraryModel.cpp.func-c.html  LibraryModel.cpp.func.html  LibraryModel.cpp.gcov.html  MediaFileModel.cpp.func-c.html  MediaFileModel.cpp.func.html  MediaFileModel.cpp.gcov.html  MetadataModel.cpp.func-c.html  MetadataModel.cpp.func.html  MetadataModel.cpp.gcov.html  PlaybackStateModel.cpp.func-c.html  PlaybackStateModel.cpp.func.html  PlaybackStateModel.cpp.gcov.html  PlaylistModel.cpp.func-c.html  PlaylistModel.cpp.func.html  PlaylistModel.cpp.gcov.html  QueueModel.cpp.func-c.html  QueueModel.cpp.func.html  QueueModel.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/services/: AudioPlaybackEngine.cpp.func-c.html  AudioPlaybackEngine.cpp.func.html  AudioPlaybackEngine.cpp.gcov.html  FileScanner.cpp.func-c.html  FileScanner.cpp.func.html  FileScanner.cpp.gcov.html  MetadataReader.cpp.func-c.html  MetadataReader.cpp.func.html  MetadataReader.cpp.gcov.html  SerialCommunication.cpp.func-c.html  SerialCommunication.cpp.func.html  SerialCommunication.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
data/: last_scan_path.txt
docs/: sequence_diagrams.mmd  sequence_diagrams_prompts.md
inc/config/: AppConfig.h
inc/controllers/: ExploreController.h  HardwareController.h  HistoryController.h  LibraryController.h  MainController.h  PlaybackController.h  PlaylistController.h  QueueController.h  SourceController.h  VideoController.h
inc/core/: Application.h
inc/models/: ExploreModel.h  HistoryModel.h  LibraryModel.h  MediaFileModel.h  MetadataModel.h  PlaybackStateModel.h  PlaylistModel.h  QueueModel.h  SystemStateModel.h  VideoMetadataModel.h
inc/repositories/: HistoryRepository.h  IRepository.h  LibraryRepository.h  PlaylistRepository.h
inc/services/: AudioPlaybackEngine.h  FileScanner.h  IFileScanner.h  IMetadataReader.h  IPlaybackEngine.h  ISerialCommunication.h  IVideoMetadataReader.h  MetadataReader.h  SerialCommunication.h  VideoMetadataReader.h  VideoPlaybackEngine.h
inc/ui/: ImGuiManager.h  UIManager.h
inc/utils/: AVSyncClock.h  Log.h  Logger.h  Observer.h  ThreadSafeQueue.h
inc/views/: ExploreScreen.h  HistoryScreen.h  IView.h  LibraryScreen.h  MainScreen.h  NowPlayingBar.h  PlaylistScreen.h  QueuePanel.h  ScanScreen.h  VideoPlayerScreen.h  VideoRenderPanel.h
scripts/: setup_deps.sh
src/: main.cpp
src/config/: AppConfig.cpp
src/controllers/: ExploreController.cpp  HardwareController.cpp  HistoryController.cpp  LibraryController.cpp  MainController.cpp  PlaybackController.cpp  PlaylistController.cpp  QueueController.cpp  SourceController.cpp  VideoController.cpp
src/core/: Application.cpp
src/models/: ExploreModel.cpp  HistoryModel.cpp  LibraryModel.cpp  MediaFileModel.cpp  MetadataModel.cpp  PlaybackStateModel.cpp  PlaylistModel.cpp  QueueModel.cpp  VideoMetadataModel.cpp
src/repositories/: HistoryRepository.cpp  LibraryRepository.cpp  PlaylistRepository.cpp
src/services/: AudioPlaybackEngine.cpp  FileScanner.cpp  MetadataReader.cpp  SerialCommunication.cpp  VideoMetadataReader.cpp  VideoPlaybackEngine.cpp
src/ui/: ImGuiManager.cpp  UIManager.cpp
src/utils/: AVSyncClock.cpp  Logger.cpp
src/views/: ExploreScreen.cpp  HistoryScreen.cpp  LibraryScreen.cpp  MainScreen.cpp  NowPlayingBar.cpp  PlaylistScreen.cpp  QueuePanel.cpp  ScanScreen.cpp  VideoPlayerScreen.cpp  VideoRenderPanel.cpp
tests/config/: AppConfigTest.cpp
tests/controllers/: HardwareControllerBufferTest.cpp  HardwareControllerInvalidTest.cpp  HardwareControllerParseTest.cpp  HardwareControllerRefreshTest.cpp  HardwareControllerTest.cpp  HistoryControllerTest.cpp  LibraryControllerExtraTest.cpp  LibraryControllerTest.cpp  MainControllerTest.cpp  PlaybackControllerAdvancedTest.cpp  PlaybackControllerEngineTest.cpp  PlaybackControllerNavigationTest.cpp  PlaybackControllerTest.cpp  PlaylistControllerTest.cpp  QueueControllerTest.cpp  SourceControllerExtraTest.cpp  SourceControllerTest.cpp
tests/mocks/: MockFileScanner.h  MockLibraryModel.h  MockLibraryRepository.h  MockPlaybackEngine.h  MockRepositories.h  MockSerialCommunication.h
tests/models/: HistoryModelTest.cpp  LibraryModelTest.cpp  MediaFileModelTest.cpp  MetadataModelTest.cpp  PlaybackStateModelTest.cpp  PlaylistModelTest.cpp  QueueModelTest.cpp
tests/repositories/: HistoryRepositoryTest.cpp  LibraryRepositoryTest.cpp  PlaylistRepositoryTest.cpp
tests/services/: AudioPlaybackEngineTest.cpp  FileScannerTest.cpp  MetadataReaderTest.cpp  SerialCommunicationTest.cpp
